samples/_failures_safe/1761350710_fa4cb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a9eeb471.c: In function ‘main’:
./samples/SAFE/__tmp_a9eeb471.c:131:5: error: expected declaration or statement at end of input
  131 |     printf("Matrix Operations Program\n");
      |     ^~~~~~
